REFACT: Change the Pageable usage in openapi. Using of page, size, sort and handle this parameters with PageRequest.of
